--- a/public/styles.css
+++ b/public/styles.css
@@ -362,7 +362,8 @@ img {
   text-align: center;
 }
 
-#endreSyklerBestilling {
+#endreSyklerBestilling,
+#endreUtstyrBestilling {
   position: relative;
   text-align: center;
   top: 50%;
