--- a/public/styles.css
+++ b/public/styles.css
@@ -39,7 +39,7 @@ body {
 #toggleFiltrerKnapp {
   position: absolute;
   top: 10%;
-  right: 10px;
+  right: 20px;
 }
 
 /*positions all headings*/
@@ -117,10 +117,10 @@ h2 {
   text-align: center;
 }
 
-#oversiktTilbake {
+#tilbake {
   position: absolute;
-  right: 15px;
-  bottom: 15px;
+  left: 15px;
+  top: 10%;
 }
 
 #nyKundeDiv {
@@ -149,11 +149,6 @@ h2 {
 #kundeTlfInput {
   max-width: 34%;
   margin: auto;
-}
-
-#syklerDiv {
-  position: relative;
-  text-align: center;
 }
 
 .sykkelDiver {
@@ -190,8 +185,8 @@ img {
 
 #loggUtKnapp {
   position: absolute;
-  top: 23px;
-  right: 15px;
+  top: 3%;
+  right: 3%;
   color: black;
 }
 /*EndreBestilling tabell*/
@@ -362,9 +357,8 @@ img {
   text-align: center;
 }
 
-#endreSyklerBestilling,
-#endreUtstyrBestilling {
+#syklerDiv,
+#utstyrDiv {
   position: relative;
   text-align: center;
-  top: 50%;
 }
