--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,9 @@ body {
 #velgSykkel,
 #velgUtstyr,
 #bestillingOversikt,
-#filtrerAktiveBestillingerDiv {
+#filtrerAktiveBestillingerDiv,
+#filtrerRapportTotalDiv,
+#filtrerRapportAnsatteDiv {
   display: none;
 }
 
@@ -27,7 +29,8 @@ body {
   max-width: 50%;
 }
 #filtrerAktiveBestillingerDiv,
-#filtrerRapporterDiv {
+#filtrerRapportTotalDiv,
+#filtrerRapportAnsatteDiv {
   background-color: #f2f2f2;
   padding-bottom: 20px;
   margin: auto;
@@ -37,13 +40,12 @@ body {
 }
 
 #toggleFiltrerKnapp {
-  position: absolute;
-  top: 10%;
-  right: 20px;
+  position: relative;
 }
 
 /*positions all headings*/
-h2 {
+h2,
+h1 {
   text-align: center;
 }
 
@@ -200,6 +202,7 @@ img {
 
 #customers td,
 #customers th {
+  text-align: center;
   border: 1px solid #ddd;
   padding: 8px;
 }
@@ -215,7 +218,7 @@ img {
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: left;
+  text-align: center;
   background-color: #4caf50;
   color: white;
 }
@@ -287,11 +290,12 @@ img {
   margin: auto;
 }
 
-#rapportTabellDiv {
+#rapportTotalTabellDiv,
+#rapportAnsatteTabellDiv {
   text-align: center;
 }
 
-#totalGevinstDiv {
+.gevinstDiver {
   padding: 15px;
   border: 2px solid black;
   max-width: 30%;
