jobbet litt med css

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,18 @@
+@import url(https://fonts.googleapis.com/css?family=Exo:100,200,400);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
+
 body {
-  background-image: url('../bilder/stripes-light.png');
-  background-color: white;
+background-color: #c4dfe6 !important;
 }
 /*removes all rounded corners in bootstrap buttons*/
 * {
   border-radius: 0 !important;
 }
+#header{
+  background-color: #002c54 !important;
+  color: #fff !important;
+}
+
 
 #velgSykkel,
 #velgUtstyr,
@@ -50,23 +57,27 @@ h1 {
 }
 
 #loginDiv {
-  background-color: #f2f2f2;
-  padding: 20px;
+
   margin: auto;
   top: 25%;
   position: relative;
   max-width: 50%;
+
 }
+
 
 #brukernavnDiv,
 #passordDiv {
   max-width: 75%;
+  background: transparant;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #inputBrukernavn,
 #inputPassord {
   width: 100%;
 }
+
 #salgStartsideKnapperDiv,
 #adminStartsideKnapperDiv {
   position: absolute;
@@ -81,7 +92,7 @@ h1 {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #4caf50;
+  background-color: #002c54;
   color: white;
   text-align: center;
   padding-bottom: 15px;
@@ -91,7 +102,7 @@ h1 {
 }
 
 .btn {
-  background-color: #4caf50; /* Green */
+  background-color: #2b616d; /* Green */
   border: none;
   color: white;
   padding: 7px 30px;
