--- a/public/styles.css
+++ b/public/styles.css
@@ -26,6 +26,7 @@ body {
 
 #yttersteDiv {
   position: relative;
+  text-align: center;
   height: 100vh;
   width: 100vw;
 }
@@ -54,7 +55,10 @@ body {
 
 /*positions all headings*/
 h2,
-h1 {
+h1,
+h3,
+h4,
+h5 {
   text-align: center;
 }
 
@@ -290,15 +294,19 @@ img {
   background-color: #f2f2f2;
 }
 
-#customers tr:hover {
+#customers tr:nth-child(odd) {
   background-color: #ddd;
+}
+
+#customers tr:hover {
+  background-color: #c4dfe6;
 }
 
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #002c54;
   color: white;
 }
 #velgSykkel,
@@ -429,14 +437,14 @@ img {
 
 #syklerIbestilling {
   position: relative;
-  width: 30%;
+  width: 45%;
   display: inline-block;
 }
 
 #utstyrIbestilling {
   position: relative;
   display: inline-block;
-  width: 30%;
+  width: 45%;
 }
 
 #endreInfoBestilling {
@@ -446,6 +454,17 @@ img {
 
 #syklerDiv,
 #utstyrDiv {
+  position: relative;
+  text-align: center;
+}
+
+#selectInnlevering {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+
+#leverInnForm {
   position: relative;
   text-align: center;
 }
