--- a/public/styles.css
+++ b/public/styles.css
@@ -30,6 +30,7 @@ body {
   height: 100vh;
   width: 100vw;
 }
+
 .container {
   padding: 20px;
   margin: auto;
@@ -37,6 +38,7 @@ body {
   position: relative;
   max-width: 50%;
 }
+
 #filtrerAktiveBestillingerDiv,
 #filtrerRapportTotalDiv,
 #filtrerRapportAnsatteDiv,
@@ -63,19 +65,19 @@ h5 {
 }
 
 #loginInputDiv {
-  display: inline-block;
   text-align: center;
-  height: 150px;
-  width: 350px;
+  max-width: 35%;
+  margin: auto;
   padding: 10px;
+  display: inline-block;
   z-index: 2;
 }
 
 #inputBrukernavn {
   position: relative;
   text-align: center;
-  width: 250px;
-  height: 30px;
+  max-height: 5%;
+  max-width: 100%;
   background: transparent;
   border: 1px solid black;
   border-radius: 2px;
@@ -89,8 +91,8 @@ h5 {
 #inputPassord {
   position: relative;
   text-align: center;
-  width: 250px;
-  height: 30px;
+  max-height: 5%;
+  max-width: 100%;
   background: transparent;
   border: 1px solid black;
   border-radius: 2px;
@@ -103,8 +105,7 @@ h5 {
 }
 
 #loginKnapp {
-  width: 250px;
-  height: 35px;
+  position: relative;
   background: #fff;
   border: 1px solid #fff;
   cursor: pointer;
@@ -115,6 +116,8 @@ h5 {
   font-weight: 400;
   padding: 6px;
   margin-top: 10px;
+  max-height: 10%;
+  width: 100%;
 }
 
 #loginKnapp:hover {
@@ -135,6 +138,7 @@ img {
 
 #loginDiv {
   position: relative;
+  margin: auto;
   top: 20%;
   max-width: 70%;
   text-align: center;
@@ -142,18 +146,12 @@ img {
 }
 
 #loginBildeDiv {
+  position: relative;
   display: inline-block;
-  height: 300px;
-  width: 300px;
+  margin: auto;
+  width: 35%;
   z-index: 2;
 }
-
-/* #brukernavnDiv,
-#passordDiv {
-  max-width: 75%;
-  background: transparant;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-} */
 
 #salgStartsideKnapperDiv,
 #adminStartsideKnapperDiv {
@@ -172,8 +170,8 @@ img {
   background-color: #002c54;
   color: white;
   text-align: center;
-  padding-bottom: 15px;
-  padding-top: 15px;
+  padding-bottom: 5px;
+  padding-top: 10px;
   font-family: Fjalla One, sans-serif;
   font-size: 15px;
 }
