Css og bootstrap

--- a/public/styles.css
+++ b/public/styles.css
@@ -376,7 +376,10 @@ img {
 #nyAnsattLokasjonInput,
 #nyAnsattEtternavnInput,
 #nyAnsattBrukernavnInput,
-#nyAnsattTlfInput {
+#nyAnsattTlfInput,
+#nyLokasjonAdresseInput,
+#nyLokasjonPostKodeInput,
+#nyLokasjonOmrådeInput {
   max-width: 34%;
   margin: auto;
 }
