--- a/public/styles.css
+++ b/public/styles.css
@@ -2,9 +2,9 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700, 400, 300);
 
 body {
-/*  background-color: #c4dfe6 !important;
+  /*  background-color: #c4dfe6 !important;
 */
-background-image: url("../bilder/eb285e21.png") !important;
+  background-image: url('../bilder/eb285e21.png') !important;
 }
 
 /*removes all rounded corners in bootstrap buttons*/
@@ -133,8 +133,6 @@ img {
 }
 
 #logo {
-  max-width: 100%;
-  max-height: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -216,9 +214,8 @@ img {
 #nyKundeDiv {
   position: relative;
   text-align: center;
-  max-width: 60%;
-  left: 20%;
-  right: 20%;
+  width: 100vw;
+  height: 100vh;
 }
 
 #bestilling_typeInput,
@@ -343,8 +340,7 @@ img {
   position: relative;
   max-width: 45%;
   text-align: center;
-  left: 30%;
-  right: 30%;
+  margin: auto;
   border-right: 2px solid black;
   border-left: 2px solid black;
 }
