--- a/public/styles.css
+++ b/public/styles.css
@@ -65,11 +65,12 @@ h5 {
 }
 
 #loginInputDiv {
+  position: relative;
   text-align: center;
-  max-width: 35%;
-  margin: auto;
+  min-width: 25%;
+  margin-top: 25px;
   padding: 10px;
-  display: inline-block;
+  float: right;
   z-index: 2;
 }
 
@@ -131,6 +132,8 @@ img {
 }
 
 #logo {
+  height: 250px;
+  width: 250px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -138,16 +141,14 @@ img {
   position: relative;
   margin: auto;
   top: 20%;
-  max-width: 70%;
+  max-width: 45%;
+  max-height: 370px;
   text-align: center;
-  border: 2px solid black;
 }
 
 #loginBildeDiv {
   position: relative;
-  display: inline-block;
-  margin: auto;
-  width: 35%;
+  float: left;
   z-index: 2;
 }
 
